cambios de prueba

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <p>pepo</p>
     <div class="dialogo juego-termiando">
         <div class="dialogo-botones">
             <button id="boton-nuevo-juego">Nuevo Juego</button>
