Revert "Branch caro"

--- a/index.html
+++ b/index.html
@@ -4,77 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MatcheADAs G5-</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <title>MatcheADAs G5</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <div class="estructura">
-
-        <h1 class="matcheadas"> MatcheADAs</h1>
-
-        <div class="barra">
-
-            <div class="informacion-opciones">
-                <div class="puntos">
-                    <p>
-                        Combo x
-                    </p>
-                    <p>
-                        Puntos: 0
-                    </p>
-                </div>
-                <div class="botones-barra">
-                    <button class="boton ayuda"> <i class="fas fa-info-circle"></i> </button>
-                    <button class=" boton reiniciar"> <i class="fas fa-sync-alt"></i> </button>
-                </div>
-
-            </div>
-
     <p>pepo</p>
     <div class="dialogo juego-termiando">
         <div class="dialogo-botones">
             <button id="boton-nuevo-juego">Nuevo Juego</button>
             <button id="boton-reiniciar-juego">Reiniciar</button>
-
         </div>
-
-
-
-<!--         
-            <div class="botones">
-                <button id="boton-nuevo-juego">Nuevo Juego</button>
-                <button id="boton-reiniciar-juego">Reiniciar</button>
-            </div>
-        </div> -->
-
-
-
-
-        <div class="dialogo nuevo-juego">
-            <div class="dialogo-botones">
-                <button id="boton-modo-facil">Fácil</button>
-                <button id="boton-modo-normal">Normal</button>
-                <button id="boton-modo-dificil">Difícil</button>
-            </div>
-        </div> 
-
-        <div class="contenedor-grilla">
-
-
-
-            <div id="grilla"></div>
-
-        </div>
-
-        <div class="contenedor-reloj">
-
-            <i class="far fa-clock"></i>
-        </div>
-
     </div>
+
+    <div class="dialogo nuevo-juego">
+        <div class="dialogo-botones">
+            <button id="boton-modo-facil">Fácil</button>
+            <button id="boton-modo-normal">Normal</button>
+            <button id="boton-modo-dificil">Difícil</button>
+        </div>
+    </div>
+
+    <div id="grilla"></div>
 
     <script src="index.js"></script>
 </body>
