--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MatcheADAs G5</title>
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-=======
->>>>>>> f0fd8bf16da2c5d2eed57f2d7a24b791ea3b869d
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<<<<<<< HEAD
-
 
     <div class="estructura">
         <h1 class="matcheadas"> MATCHEADAS </h1>
@@ -40,15 +35,15 @@
         </div>
         <div class="dialogo juego-terminado">
             <div class="dialogo-botones">
-                <button id="nuevo-juego">Nuevo Juego</button>
-                <button id="reiniciar-juego">Reiniciar Juego</button>
+                <button id="boton-nuevo-juego">Nuevo Juego</button>
+                <button id="boton-reiniciar-juego">Reiniciar Juego</button>
 
             </div>
             <div class="dialogo-dificultad">
                 <div class="dialogo-botones">
-                    <button id="facil" class="ocultar">Facil</button>
-                    <button id="medio" class="ocultar">Medio</button>
-                    <button id="dificil" class="ocultar">Dificil</button>
+                    <button id="boton-modo-facil" class="ocultar">Facil</button>
+                    <button id="boton-modo-normal" class="ocultar">Medio</button>
+                    <button id="boton-modo-dificil" class="ocultar">Dificil</button>
                 </div>
 
             </div>
@@ -63,25 +58,8 @@
     </div>
 
 
-=======
-    <p>pepo</p>
-    <div class="dialogo juego-termiando">
-        <div class="dialogo-botones">
-            <button id="boton-nuevo-juego">Nuevo Juego</button>
-            <button id="boton-reiniciar-juego">Reiniciar</button>
-        </div>
-    </div>
-
-    <div class="dialogo nuevo-juego">
-        <div class="dialogo-botones">
-            <button id="boton-modo-facil">Fácil</button>
-            <button id="boton-modo-normal">Normal</button>
-            <button id="boton-modo-dificil">Difícil</button>
-        </div>
-    </div>
 
     <div id="grilla"></div>
->>>>>>> f0fd8bf16da2c5d2eed57f2d7a24b791ea3b869d
 
     <script src="index.js"></script>
 </body>
