defino tamanios desktop y mobile desde JS

--- a/index.html
+++ b/index.html
@@ -56,10 +56,6 @@
                 <button class="boton" id="boton-nuevo-juego">Nuevo Juego</button>
             </div>
         </div>
-
-        <div class="matches">
-            <button id="buscar-matches">Buscar Matches</button>
-        </div>
     </div>
 
     <div class="estructura">
@@ -85,16 +81,15 @@
 
         </div>
 
+            <div id="grilla" class="grilla"></div>
 
-        <div id="grilla" class="grilla"></div>
-
-
+        <div class="contenedor-cuenta-regresiva">
+            <i id="icono-reloj" class="fas fa-hourglass-half"></i>
+            <p class="cuenta-regresiva" id="tiempo-restante">0:00</p>
+        </div>
+    
     </div>
 
-    <div class="contenedor-cuenta-regresiva">
-        <i class="fas fa-hourglass-half"></i>
-        <p class="cuenta-regresiva" id="tiempo-restante">0:00</p>
-    </div>
     <script src="index.js"></script>
 </body>
 
