soluciono bugs fondo negro y alineacion reloj

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
             </div>
         </div>
 
-        <div id="grilla" class="fondo-negro"></div>
+        <div class="contenedor-grilla fondo-negro">
+            <div id="grilla"></div>
+        </div>
 
         <div class="contenedor-cuenta-regresiva">
             <i class="fas fa-hourglass-half"></i>
