--- a/index.html
+++ b/index.html
@@ -12,86 +12,87 @@
 
 <body>
     <!-- IMPORTANTE:Por favor no borrar/modificar la clase dialogo, es muy necesaria para que el JS funcione!!! -->
-    <div id="overlay">
+    <div class="background">
+        <div id="overlay">
 
-        <div class="modal inicial">
-            <div class="dialogo hidden" id="dialogo-bienvenida">
-                <h2>¡Bienvenida!</h2>
-                <p>En MatcheADAs tu objetivo es juntar tres o más ítems del mismo tipo,
-                    ya sea en fila o columna. Para eso, selecciona un ítem y a
-                    continuación un ítem adyacente para intercambiarlos de lugar.</p>
-                <p>Si se forma un grupo, esos ítems se eliminarán y ganarás puntos.
-                    ¡Sigue armando grupos de 3 o más antes de que se acabe el tiempo!</p>
-                <div class="dialogo-botones">
-                    <button class="boton" id="boton-empezar-juego">A Jugar</button>
+            <div class="modal inicial">
+                <div class="dialogo hidden" id="dialogo-bienvenida">
+                    <h2>¡Bienvenida!</h2>
+                    <p>En MatcheADAs tu objetivo es juntar tres o más ítems del mismo tipo,
+                        ya sea en fila o columna. Para eso, selecciona un ítem y a
+                        continuación un ítem adyacente para intercambiarlos de lugar.</p>
+                    <p>Si se forma un grupo, esos ítems se eliminarán y ganarás puntos.
+                        ¡Sigue armando grupos de 3 o más antes de que se acabe el tiempo!</p>
+                    <div class="dialogo-botones">
+                        <button class="boton" id="boton-empezar-juego">A Jugar</button>
+                    </div>
                 </div>
             </div>
+
+
+            <div class="dialogo dialogo-dificultad hidden" id="dialogo-nuevo-juego">
+                <h2>Nuevo Juego</h2>
+                <p>Selecciona una dificultad</p>
+                <div class="dialogo-botones">
+                    <button id="boton-modo-facil" class="boton ocultar">Facil</button>
+                    <button id="boton-modo-normal" class="boton ocultar">Medio</button>
+                    <button id="boton-modo-dificil" class="boton ocultar">Dificil</button>
+                </div>
+            </div>
+
+            <div class="dialogo hidden" id="dialogo-juego-terminado">
+                <h2>¡Juego terminado!</h2>
+                <p>Puntaje Obtenido: <span id="puntaje-obtenido"></span></p>
+                <div class="dialogo-botones">
+                    <button class="boton" id="boton-nuevo-juego">Nuevo Juego</button>
+                    <button class="boton" id="boton-reiniciar-juego">Reiniciar</button>
+                </div>
+            </div>
+
+            <div class="dialogo hidden" id="dialogo-reiniciar-juego">
+                <h2>Reiniciar Juego?</h2>
+                <p>Perderás todo tu puntaje acumulado!</p>
+                <div class="dialogo-botones">
+                    <button class="boton boton-cancelar" id="boton-cancelar">Cancelar</button>
+                    <button class="boton" id="boton-nuevo-juego">Nuevo Juego</button>
+                </div>
+            </div>
+
+
         </div>
 
+        <div class="estructura">
+            <h1 class="matcheadas"> MATCHEADAS </h1>
+            <div class="barra informacion-hidden">
+                <div class="puntos">
+                    <p>
+                        Combo x <span id="contador-combos">1</span>
+                    </p>
+                    <p>
+                        Puntos: <span id="contador-puntos">0</span>
+                    </p>
+                </div>
 
-        <div class="dialogo dialogo-dificultad hidden" id="dialogo-nuevo-juego">
-            <h2>Nuevo Juego</h2>
-            <p>Selecciona una dificultad</p>
-            <div class="dialogo-botones">
-                <button id="boton-modo-facil" class="boton ocultar">Facil</button>
-                <button id="boton-modo-normal" class="boton ocultar">Medio</button>
-                <button id="boton-modo-dificil" class="boton ocultar">Dificil</button>
+                <div class="estilo-botones-barra">
+                    <button class="botones ayuda" id="boton-ayuda">
+                        <i class="fas fa-info-circle"></i>
+                    </button>
+                    <button class="botones restart" id="boton-restart">
+                        <i class="fas fa-redo-alt"></i>
+                    </button>
+                </div>
+            </div>
+
+            <div class="contenedor-grilla fondo-negro">
+                <div id="grilla"></div>
+            </div>
+
+            <div class="contenedor-cuenta-regresiva">
+                <i class="fas fa-hourglass-half"></i>
+                <p class="cuenta-regresiva" id="tiempo-restante">0:00</p>
             </div>
         </div>
-
-        <div class="dialogo hidden" id="dialogo-juego-terminado">
-            <h2>¡Juego terminado!</h2>
-            <p>Puntaje Obtenido: <span id="puntaje-obtenido"></span></p>
-            <div class="dialogo-botones">
-                <button class="boton" id="boton-nuevo-juego">Nuevo Juego</button>
-                <button class="boton" id="boton-reiniciar-juego">Reiniciar</button>
-            </div>
-        </div>
-
-        <div class="dialogo hidden" id="dialogo-reiniciar-juego">
-            <h2>Reiniciar Juego?</h2>
-            <p>Perderás todo tu puntaje acumulado!</p>
-            <div class="dialogo-botones">
-                <button class="boton boton-cancelar" id="boton-cancelar">Cancelar</button>
-                <button class="boton" id="boton-nuevo-juego">Nuevo Juego</button>
-            </div>
-        </div>
-
-
     </div>
-
-    <div class="estructura">
-        <h1 class="matcheadas"> MATCHEADAS </h1>
-        <div class="barra informacion-hidden">
-            <div class="puntos">
-                <p>
-                    Combo x <span id="contador-combos">1</span>
-                </p>
-                <p>
-                    Puntos: <span id="contador-puntos">0</span>
-                </p>
-            </div>
-
-            <div class="estilo-botones-barra">
-                <button class="botones ayuda" id="boton-ayuda">
-                    <i class="fas fa-info-circle"></i>
-                </button>
-                <button class="botones restart" id="boton-restart">
-                    <i class="fas fa-redo-alt"></i>
-                </button>
-            </div>
-        </div>
-
-        <div class="contenedor-grilla fondo-negro">
-            <div id="grilla"></div>
-        </div>
-
-        <div class="contenedor-cuenta-regresiva">
-            <i class="fas fa-hourglass-half"></i>
-            <p class="cuenta-regresiva" id="tiempo-restante">0:00</p>
-        </div>
-    </div>
-
 
     <script src="index.js"></script>
 </body>
